--- a/rythms/public/index.html
+++ b/rythms/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/browserIcon16.svg" />
+  <link rel="icon" href="%PUBLIC_URL%/logo512.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -30,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>:P (ete)</title>
+  <title>Vitals</title>
 </head>
 
 <body>
